Created narration. about to start item selection segment

--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <body>
         <div id="gameArea">
             <div id="gameTop">
-                <div id="textContainer">
-                    
-                </div>
-
 
                 <div id="actionContainer">
                     <div id="nameInputContainer" style="display: flex;">
@@ -22,6 +18,10 @@
                     </div>
                 </div>
 
+                <div id="textContainer">
+
+                </div>
+
             </div>
 
             <div id="gameBottom">
@@ -29,6 +29,7 @@
                     <button id="attackButton">attack</button>
                     <button id="guardButton">guard</button>
                     <button id="talkButton">talk</button>
+                    <button id="itemButton">item</button>
                 </div>
                 
                 <div id="optionContainer"></div>
