--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                     <div id="itemSelect" style="display: none">
                         <div id="itemSelectQuestion">Which items did you bring?</div>
                         <ol class="selectionChoices" id="itemSelectionChoices">
-                            <li id="sword"><button>Your Trusty Sword</button></li>
-                            <li id="shield"><button>A Wooden Shield</button></li>
+                            <li id="sword"><button>The Sword: Famish</button></li>
+                            <li id="shield"><button>The Shield: Olea </button></li>
                             <li id="spellBook"><button>The Spell Book of Power</button></li>
                             <li id="potion"><button>A Potion of Health</button></li>
                             <li id="pasta"><button>Homemade Pasta</button></li>
                         </ol>
                         <div id="itemDescriptionSection">
-                            <div class="itemDescription" id="swordDescription" style="display: none">Your trusty sword. A weapon that has been by your side for your whole career alongside your shield! Grants a boost to your attack damage.</div>
-                            <div class="itemDescription" id="shieldDescription" style="display: none">A wooden shield. A shield that has been by your side for your whole career alongside your sword! Grants a boost to your defense.</div>
+                            <div class="itemDescription" id="swordDescription" style="display: none">Your trusty sword. A weapon that has been by your side for your whole career! Your name has been carved in the annals of history as one of the Great Continental Swordsmen due to your proficiency with this weapon. Grants a boost to your attack power.</div>
+                            <div class="itemDescription" id="shieldDescription" style="display: none">Your trusty ironwood shield. A shield that has been by your side for your whole career! Created in the Iron Age, this shield has saved the appendages of a great many heroes before you. You sometimes use the shield as a plate for the delicious meals you cook. Grants a boost to your defense.</div>
                             <div class="itemDescription" id="spellBookDescription" style="display: none">The Spell Book of Power. A book that was originally created by The Great Demon Wizard Kishpec 4000 years ago. You won it in a bet. It is said to hold the most powerful spells created in The Demon Lord's R&D department within its pages.</div>
                             <div class="itemDescription" id="potionDescription" style="display: none">A Potion of Health. You were gifted this as a reward for saving The Village of Feast in the Eastern Country about 20 years ago. It is said to heal any and all of the injuries sustained by a person. Smells funky.</div>
                             <div class="itemDescription" id="pastaDescription" style="display: none">Homemade Pasta. You made this pasta yourself. Made by first frying garlic in a pan, then melting down tomatoes into a sauce, mixing the sauce with the garlic and a half cup of cooking wine, and then adding pasta and a healthy amount of basil, it is the best pasta in the world, if you do say so yourself. Slightly heals you by relaxing your soul.</div>
