I have created the functionality for the consumables. Now I have to modify the itemSelection section and item use section so that items can be used

--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
                     <button id="itemButton" disabled>item</button>
                 </div>
                 
-                <div id="optionContainer"></div>
+                <div id="optionContainer">
+                    <div id="itemContainer" style="display: none">
+                        <ol class="selectionChoices" id="itemChoices">
+                            <li id="item1Button"><button></button></li>
+                            <li id="item2Button"><button></button></li>
+                            <li id="item3Button"><button></button></li>
+                        </ol>
+                    </div>
+                </div>
             </div>
         </div>
 
