Created most of the game. I need to debug the battle sequence and tighten up how the itemselection works.

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                 
                 <div id="optionContainer">
                     <div id="itemContainer" style="display: none">
-                        <ol class="selectionChoices" id="itemChoices">
-                            <li id="item1Button"><button></button></li>
-                            <li id="item2Button"><button></button></li>
-                            <li id="item3Button"><button></button></li>
+                        <ol class="selectionChoices">
+                            <li id="item1Button" style="display: none"><button id="item1ActionButton">Item 1</button></li>
+                            <li id="item2Button" style="display: none"><button id="item2ActionButton">Item 2</button></li>
+                            <li id="item3Button" style="display: none"><button id="item3ActionButton">Item 3</button></li>
                         </ol>
                     </div>
                 </div>
